tests/NormalTests/paczka1/fuzzy1/58065265.err
Error in line 1: A951 S446 56,5
Error in line 2: XUz0 A951 84,6
Error in line 10: ohD1 S146 10,1
Error in line 12: 0TKXg A280 13,2
Error in line 9: igl8cuyAnc0 A280 9,3
Error in line 28: igl8cuyAnc0 S146 64,9
Error in line 29: igl8cuyAnc0 S446 30,4
